# liive

./: .flake8  .gitignore  README.md  docker-compose.yml  init-db.sh
.devcontainer/: devcontainer.json
backend/: Dockerfile  Dockerfile.template  go.mod  install_dev.sh  pyproject.toml
backend/apps/liive-auth-api/: pyproject.toml  run.sh
backend/apps/liive-auth-api/src/liive_auth_api/: __init__.py  config.py  main.py  schemas.py  security.py
backend/apps/liive-chat-api/: pyproject.toml  run.sh
backend/apps/liive-chat-api/src/liive_chat_api/: main.py  schemas.py
backend/apps/liive-migrator/: alembic.ini  pyproject.toml  run.sh
backend/apps/liive-migrator/src/liive_migrator/: main.py
backend/apps/liive-migrator/src/liive_migrator/migrations/: env.py
backend/apps/liive-migrator/src/liive_migrator/migrations/versions/: 001_create_user_table.py  002_create_chat_tables.py
backend/apps/liive-ws-api/: pyproject.toml  run.sh
backend/apps/liive-ws-api/src/liive_ws_api/: main.py
backend/integration_tests/: go.mod
backend/integration_tests/scripts/: run_tests.sh
backend/integration_tests/tests/: auth_test.go  chat_test.go  setup_test.go  user_test.go
backend/liive-auth/: Dockerfile  go.mod  go.sum
backend/liive-auth/cmd/server/: main.go
backend/liive-auth/docs/: docs.go  swagger.json  swagger.yaml
backend/liive-auth/internal/handlers/: auth_handler.go
backend/liive-auth/internal/service/: auth_service.go
backend/liive-auth/internal/types/: requests.go
backend/liive-message-storer/: Dockerfile  go.mod
backend/liive-message-storer/cmd/server/: main.go
backend/liive-message-storer/docs/: docs.go  swagger.json  swagger.yaml
backend/liive-migrator/: Dockerfile  go.mod
backend/liive-migrator/cmd/server/: main.go
backend/liive-rest-api/: Dockerfile  go.mod  go.sum
backend/liive-rest-api/cmd/server/: main.go
backend/liive-rest-api/docs/: docs.go  swagger.json  swagger.yaml
backend/liive-rest-api/internal/handlers/: chat_handler.go
backend/liive-rest-api/internal/service/: chat_service.go
backend/liive-rest-api/internal/types/: chat_types.go
backend/liive-user-manager/: Dockerfile  go.mod  go.sum
backend/liive-user-manager/cmd/server/: main.go
backend/liive-user-manager/docs/: docs.go  swagger.json  swagger.yaml
backend/liive-user-manager/internal/handlers/: user_handler.go
backend/liive-user-manager/internal/service/: user_service.go
backend/liive-user-manager/internal/types/: requests.go  responses.go
backend/liive-ws-api/: Dockerfile  go.mod  go.sum
backend/liive-ws-api/cmd/server/: main.go
backend/liive-ws-api/docs/: docs.go  swagger.json  swagger.yaml
backend/shared/: go.mod  go.sum
backend/shared/liive-common-api/: pyproject.toml
backend/shared/liive-common-api/src/liive_common_api/: __init__.py  app.py  auth.py  db.py  health.py
backend/shared/liive-sql-models/: pyproject.toml
backend/shared/liive-sql-models/src/liive_sql_models/: base.py  config.py
backend/shared/liive-sql-models/src/liive_sql_models/models/: chat.py  user.py
backend/shared/pkg/auth/: jwt.go
backend/shared/pkg/database/: db.go
backend/shared/pkg/models/: chat.go  user.go
frontend/liive-app/: package-lock.json  package.json
frontend/liive-client/: .env.production  package-lock.json  package.json  vite.config.ts
frontend/liive-client/src/: App.tsx
frontend/liive-client/src/components/: ProtectedRoute.tsx
frontend/liive-client/src/config/: api.ts
frontend/liive-client/src/features/auth/: LoginPage.tsx  RegisterPage.tsx  authSlice.ts
frontend/liive-client/src/features/chat/: ChatsPage.tsx  chatSlice.ts
frontend/liive-client/src/services/: api.ts
frontend/liive-client/src/store/: index.ts
