[project]
name = "liive-chat-api"
version = "0.1.0"
description = "Chat API service for Liive"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[mypy]>=2.0.25",
    "liive-sql-models>=0.1.0",
    "liive-common-api>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/liive_chat_api"] 